--- a/circle.yml
+++ b/circle.yml
@@ -22,6 +22,7 @@ dependencies:
     - curl -o $HOME/google_appengine_1.9.30.zip https://storage.googleapis.com/appengine-sdks/featured/google_appengine_1.9.30.zip
     - unzip -q -d $HOME $HOME/google_appengine_1.9.30.zip
     # Retrieve our secrets from the CircleCI environment
+    - echo $CLIENT_SECRET
     - echo $CLIENT_SECRET | base64 --decode > ${HOME}/client-secret.json
     # vendor our dependencies
     - mkdir -p lib
