--- a/circle.yml
+++ b/circle.yml
@@ -23,7 +23,7 @@ dependencies:
     - unzip -q -d $HOME $HOME/google_appengine_1.9.30.zip
     # Retrieve our secrets from the CircleCI environment
     - echo $CLIENT_SECRET
-    - echo $CLIENT_SECRET | base64 --decode
+    - echo $CLIENT_SECRET | base64 --decode --ignore-garbage
     - echo $CLIENT_SECRET | base64 --decode > ${HOME}/client-secret.json
     # vendor our dependencies
     - mkdir -p lib
