--- a/circle.yml
+++ b/circle.yml
@@ -24,7 +24,7 @@ dependencies:
     # Retrieve our secrets from the CircleCI environment
     - echo $CLIENT_SECRET
     - echo $CLIENT_SECRET | base64 --decode --ignore-garbage
-    - echo $CLIENT_SECRET | base64 --decode > ${HOME}/client-secret.json
+    - echo $CLIENT_SECRET | base64 --decode --ignore-garbage > ${HOME}/client-secret.json
     # vendor our dependencies
     - mkdir -p lib
     - pip install -r requirements.txt -t lib
